--- a/client/src/app/features/members/member-list/member-card/member-card.component.html
+++ b/client/src/app/features/members/member-list/member-card/member-card.component.html
@@ -35,7 +35,7 @@
         matTooltip="Message"
         matTooltipPosition="above"
         class="list-inline-item"
-        [routerLink]="'/messages/' + user().userName"
+        [routerLink]="'/members/' + user().userName + '/open-messages'"
       >
         <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
       </li>
