Fix responsiveness of messageThread with breakPoints

--- a/client/src/app/features/members/member-detail/member-detail.component.css
+++ b/client/src/app/features/members/member-detail/member-detail.component.css
@@ -47,3 +47,9 @@ mat-drawer-container {
 .message-thread-container {
   width: 50%;
 }
+
+@media screen and (max-width: 991px) {
+  .message-thread-container {
+    width: 100%;
+  }
+}
