--- a/client/src/app/features/members/member-detail/member-detail.component.html
+++ b/client/src/app/features/members/member-detail/member-detail.component.html
@@ -116,7 +116,7 @@
     <mat-drawer
       class="message-thread-container"
       #drawer
-      mode="side"
+      [mode]="drawerMode"
       position="end"
       [opened]="openMessages"
     >
