--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,6 +7,8 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  scrollbar-color: black rgb(32, 31, 32) !important;
+  scrollbar-width: thin !important;
 }
 
 .loading-spinner-container {
