send message on key enter

--- a/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
+++ b/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
@@ -52,6 +52,7 @@
       [formControl]="newMessageControl"
       [placeholder]="'Message ' + (username() | titlecase)"
       aria-describedby="basic-addon2"
+      (keydown.enter)="sendMessage()"
     />
     <button
       class="input-group-text send-button"
