Use directive to show or hide admin link

--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -32,6 +32,12 @@
             >Messages</a
           >
         </li>
+
+        <li *appHasRole="adminRoles" class="nav-item">
+          <a class="nav-link" routerLink="/admin" routerLinkActive="active"
+            >Admin</a
+          >
+        </li>
         <li class="nav-item">
           <a routerLink="/privacy-policy" class="nav-link">Privacy</a>
         </li>
