--- a/client/src/app/admin/user-management/user-management.component.html
+++ b/client/src/app/admin/user-management/user-management.component.html
@@ -12,7 +12,11 @@
       <tr>
         <td>{{ user.userName }}</td>
         <td>{{ user.roles }}</td>
-        <td><button class="btn btn-info">Edit Roles</button></td>
+        <td>
+          <button class="btn btn-info" (click)="openRolesModal(user)">
+            Edit Roles
+          </button>
+        </td>
       </tr>
       }
     </tbody>
