--- a/client/src/app/features/members/member-list/member-list.component.html
+++ b/client/src/app/features/members/member-list/member-list.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar mt-4">
     <div class="container-fluid">
       <button
-        class="navbar-toggler text-info"
+        class="navbar-toggler text-dark"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#filterOptions"
@@ -10,8 +10,8 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"></span>
-        <span class="pl-3"> Filter Options</span>
+        <i class="fa fa-filter" aria-hidden="true"></i>
+        <span class="pl-3"> Filters</span>
       </button>
       <div class="collapse navbar-collapse" id="filterOptions">
         <form [formGroup]="filterFormGroup" (ngSubmit)="submitFilters()">
