--- a/client/src/app/features/members/member-list/member-card/member-card.component.css
+++ b/client/src/app/features/members/member-list/member-card/member-card.component.css
@@ -43,3 +43,16 @@
 .list-inline-item:hover {
   cursor: pointer;
 }
+
+@keyframes fa-blink {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.4;
+  }
+}
+.is-online {
+  animation: fa-blink 1.5s linear infinite;
+  color: rgb(1, 189, 42);
+}
