--- a/client/src/app/features/members/member-list/member-card/member-card.component.html
+++ b/client/src/app/features/members/member-list/member-card/member-card.component.html
@@ -43,7 +43,10 @@
   </div>
   <div class="card-body p-1">
     <h5 class="card-title text-center">
-      <i class="fa fa-user me-2"></i>
+      <span [class.is-online]="isOnline()">
+        <i class="fa fa-user me-2"></i
+      ></span>
+
       {{ user().knownAs }}
     </h5>
     <p class="card-text text-muted text-center">{{ user().city }}</p>
