--- a/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
+++ b/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
@@ -23,9 +23,9 @@
   <hr />
 
   <div class="thread-body">
-    @if(messageThread() && messageThread().length > 0){ @for (message of
-    messageThread(); track message.id) { @if(message.senderUsername ===
-    currentUser){
+    @if(messageService.messageThread() && messageService.messageThread().length
+    > 0){ @for (message of messageService.messageThread(); track message.id) {
+    @if(message.senderUsername === currentUser){
     <div class="row justify-content-end mb-3">
       <div class="col-10 sender-card">
         <p>{{ message.content }}</p>
