--- a/client/src/app/features/members/member-detail/message-thread/message-thread.component.css
+++ b/client/src/app/features/members/member-detail/message-thread/message-thread.component.css
@@ -10,7 +10,7 @@
 }
 
 .sender-card {
-  padding: 20px;
+  padding: 5px 10px;
   background-color: rgb(185, 185, 185);
   border-radius: 8px 8px 0 8px;
   color: black;
@@ -18,7 +18,7 @@
 }
 
 .recipient-card {
-  padding: 10px;
+  padding: 5px 10px;
   background-color: azure;
   border-radius: 8px 8px 8px 0;
   color: black;
@@ -33,6 +33,7 @@
   justify-content: start;
   overflow-y: auto;
   overflow-x: hidden;
+  bottom: 0px;
 }
 
 .chat-image-thumb-nail {
