Add initial design for messageThread sent time and read tracker

--- a/client/src/app/features/members/member-detail/message-thread/message-thread.component.css
+++ b/client/src/app/features/members/member-detail/message-thread/message-thread.component.css
@@ -10,15 +10,25 @@
 }
 
 .sender-card {
-  padding: 5px 10px;
+  padding: 10px 10px;
+  width: auto;
+  min-width: 25%;
+  max-width: 80%;
+  gap: 0;
   background-color: rgb(185, 185, 185);
   border-radius: 8px 8px 0 8px;
   color: black;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
+.message-state {
+  font-size: 10px;
+}
 
 .recipient-card {
-  padding: 5px 10px;
+  width: auto;
+  min-width: 25%;
+  max-width: 80%;
+  padding: 10px 10px;
   background-color: azure;
   border-radius: 8px 8px 8px 0;
   color: black;
