--- a/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
+++ b/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
@@ -27,8 +27,16 @@
     > 0){ @for (message of messageService.messageThread(); track message.id) {
     @if(message.senderUsername === currentUser){
     <div class="row justify-content-end mb-3">
-      <div class="col-10 sender-card">
-        <p>{{ message.content }}</p>
+      <div class="sender-card">
+        <p class="mb-0">{{ message.content }}</p>
+        <div class="row align-items-end text-end">
+          @if(message.messageSent){
+          <p class="mb-0 message-state">
+            {{ message.messageSent | timeAgo }}
+            <i class="fa fa-check" aria-hidden="true"></i>
+          </p>
+          }
+        </div>
       </div>
     </div>
     }@else {
@@ -39,7 +47,15 @@
         alt="recipientPhotoUrl"
       />
       <div class="col-10 recipient-card">
-        <p>{{ message.content }}</p>
+        <p class="mb-0">{{ message.content }}</p>
+        <div class="row align-items-end text-end">
+          @if(message.messageSent){
+          <p class="mb-0 message-state">
+            {{ message.messageSent | timeAgo }}
+            <i class="fa fa-check" aria-hidden="true"></i>
+          </p>
+          }
+        </div>
       </div>
     </div>
     } }}
