--- a/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
+++ b/client/src/app/features/members/member-detail/message-thread/message-thread.component.html
@@ -9,6 +9,9 @@
       <strong class="heading-title" (click)="onOpenProfile()">{{
         username() | titlecase
       }}</strong>
+      @if(isOnline()){
+      <i class="fa fa-circle online-icon" aria-hidden="true"></i>
+      }
     </div>
     <div class="col-3 d-flex align-items-start justify-content-end">
       <strong
@@ -22,18 +25,22 @@
   </div>
   <hr />
 
-  <div #threadBodyu class="thread-body">
+  <div #threadBody class="thread-body">
     @if(messageService.messageThread() && messageService.messageThread().length
     > 0){ @for (message of messageService.messageThread(); track message.id) {
     @if(message.senderUsername === currentUser){
     <div class="row justify-content-end mb-3">
       <div class="sender-card">
         <p class="mb-0">{{ message.content }}</p>
-        <div class="row align-items-end text-end">
+        <div class="text-end">
           @if(message.messageSent){
           <p class="mb-0 message-state">
             {{ message.messageSent | timeAgo }}
+            @if(message.dateRead){
+            <app-double-check></app-double-check>
+            } @else{
             <i class="fa fa-check" aria-hidden="true"></i>
+            }
           </p>
           }
         </div>
@@ -48,11 +55,10 @@
       />
       <div class="col-10 recipient-card">
         <p class="mb-0">{{ message.content }}</p>
-        <div class="row align-items-end text-end">
+        <div class="text-end">
           @if(message.messageSent){
           <p class="mb-0 message-state">
             {{ message.messageSent | timeAgo }}
-            <i class="fa fa-check" aria-hidden="true"></i>
           </p>
           }
         </div>
